// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav Component - Snapshot Test matches the snapshot in desktop view 1`] = `
<DocumentFragment>
  <div
    class="MagentaA11y__side-nav-container"
  >
    <div
      class="MagentaA11y__side-nav"
    >
      <div
        class="MagentaA11y__side-nav--title-wrapper"
      >
        <h2
          class="MagentaA11y__side-nav--title"
          id="side-nav-title"
        >
          Criteria
        </h2>
      </div>
      <ul
        class="MagentaA11y__side-nav--list"
      >
        <li
          class="MagentaA11y__side-nav--item"
        >
          <div
            class="MagentaA11y-accordion"
          >
            <h3
              class="MagentaA11y-accordion__heading"
            >
              <button
                aria-expanded="false"
                class="MagentaA11y-accordion__headline"
                type="button"
              >
                <span
                  class="MagentaA11y-accordion__headline--text"
                >
                  Component
                </span>
              </button>
            </h3>
          </div>
        </li>
        <li
          class="MagentaA11y__side-nav--item"
        >
          <div
            class="MagentaA11y-accordion"
          >
            <h3
              class="MagentaA11y-accordion__heading"
            >
              <button
                aria-expanded="false"
                class="MagentaA11y-accordion__headline"
                type="button"
              >
                <span
                  class="MagentaA11y-accordion__headline--text"
                >
                  Page Level
                </span>
              </button>
            </h3>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SideNav Component - Snapshot Test matches the snapshot in mobile view 1`] = `
<DocumentFragment>
  <dialog
    aria-labelledby="side-nav-title"
    aria-modal="true"
    id="side-nav-dialog"
  >
    <div
      class="MagentaA11y__side-nav-container"
    >
      <div
        class="MagentaA11y__side-nav"
      >
        <div
          class="MagentaA11y__side-nav--title-wrapper"
        >
          <h2
            class="MagentaA11y__side-nav--title"
            id="side-nav-title"
          >
            Criteria
          </h2>
          <button
            aria-label="close"
            class="MagentaA11y-icon-button"
            data-size="large"
            id="close-side-nav-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.40002 18.6538L5.34619 17.6L10.9462 12L5.34619 6.40002L6.40002 5.34619L12 10.9462L17.6 5.34619L18.6538 6.40002L13.0538 12L18.6538 17.6L17.6 18.6538L12 13.0538L6.40002 18.6538Z"
              />
            </svg>
          </button>
        </div>
        <ul
          class="MagentaA11y__side-nav--list"
        >
          <li
            class="MagentaA11y__side-nav--item"
          >
            <div
              class="MagentaA11y-accordion"
            >
              <h3
                class="MagentaA11y-accordion__heading"
              >
                <button
                  aria-expanded="false"
                  class="MagentaA11y-accordion__headline"
                  type="button"
                >
                  <span
                    class="MagentaA11y-accordion__headline--text"
                  >
                    Component
                  </span>
                </button>
              </h3>
            </div>
          </li>
          <li
            class="MagentaA11y__side-nav--item"
          >
            <div
              class="MagentaA11y-accordion"
            >
              <h3
                class="MagentaA11y-accordion__heading"
              >
                <button
                  aria-expanded="false"
                  class="MagentaA11y-accordion__headline"
                  type="button"
                >
                  <span
                    class="MagentaA11y-accordion__headline--text"
                  >
                    Page Level
                  </span>
                </button>
              </h3>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </dialog>
</DocumentFragment>
`;
